src/assets/main.scss
:root{
  --samo_main: #1B262C;
  --samo_title: #f0f9ff;
  --samo_title2: #f0f9ff;
  --samo_text: #9ed8ff;
  --samo_image: #3282B8;
  --samo_image_hover: #f0f9ff;
  --samo_hline: 2px solid #3282B8;
  --samo_tab_background: #0f4c75;
  --samo_gradient: radial-gradient(#f0f9ff, #3282B8)
  --s_b_g: rgba(3,4,94,.6);
}

* {
  font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
  font-size: 13px;
}

html{
  scroll-behavior: smooth;
}

body {
  padding: 0;
  margin: 0;
  background-color: none;
}
header {
  width: 100%;
  background-color: white;
  display: flex;
  justify-content: center;
  height: 30px;
  align-items: center;
  position: fixed;
  top: 0%;
  opacity: 1;
  z-index: 2;

  &.samo {
    background-color: var(--samo_tab_background);
  }

  box-shadow: rgba(8, 8, 48, 0.9) 10px 3px 10px;

  .tab {
    width: 100px;
    background-color: none;
    text-align: center;
    text-shadow: 1px 2px 2px rgba(179, 147, 211, 0.8);

    a {
      text-decoration: none;
      color: black;
      &.samo {
        color: var(--samo_title);
      }
    }
    a:hover {
      color: pink;
      transition: 0.2s;
      cursor: pointer;
    }

    .container {
      width: 100px;
      display: flex;
      justify-content: left;
      align-items: left;
      
      &.maintitle {
        font-size: 20px;
        font-weight: bold;

        background-image: radial-gradient(#335bb7, #33b7b7);
        text-shadow: 1px 2px 2px rgba(179, 147, 211, 0.8);
        
        color: transparent;
        background-clip: text;
        -webkit-background-clip: text;

        position: relative;
        
        animation: typing 10s infinite steps(16);
        white-space: nowrap;
        overflow: hidden;

        &.samo {
          background-image: var(--samo_gradient);
        }
      }

      @keyframes typing {
        0%{ width: 0ch} /*Text is hidden*/
        10%{ width: 100px;} /*Text stays visible*/
        90%{ 
          width: 100px;
        } /*Text is deleted*/
        100%{ width: 0ch;} /*Text stays hidden*/
      }
    }
  }
  
  .tab:active {
    font-weight: bold;
  }
}

// inspiracia:
// https://codepen.io/nickcil/pen/ExXvmM
.fotercontent {
  position: relative;
  width: 100%;
  height: 70px;
  text-align: center;
  margin: 0px;
  left: 0;
  bottom: 0;
  background-color: rgba(255,255,255,1);
  background-size: 250px;
  z-index: 4;
  opacity: 1;
  display: flex;
  box-shadow: rgba(8, 8, 48, 0.9) 10px 10px 10px 10px;
  justify-content: center;
  align-items: center;
  &.samo {
    background-color: var(--samo_main);
  }
  .columns {
    .text {
      &.samo {
        color: var(--samo_text);
      }
    }
  }
  .icon {
    cursor: pointer;
    &.samo {
      color: var(--samo_image);
    }
  }
  .icon:hover {
    &.samo {
      color: var(--samo_image_hover);
    }
  }
}

.foter {
  width: 100%;
  height: 30px;
  background-color: white;
  text-align: center;
  position: fixed;
  left: 0;
  bottom: 0;
  z-index: 2;
  box-shadow: rgba(8, 8, 48, 0.9) 10px 10px 10px 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  &.samo {
    background-color: var(--samo_main);
  }
  .text {
    &.samo {
      color: var(--samo_text);
    }
  }
}

.team {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
}

.person-item {
  max-width: 250px;
  padding: 10px;
  border-radius: 50px;
  opacity: 0.8;

  .title {
    font-weight: bold;
    text-align: center;
    font-size: 14px;
    &.samo {
      color: var(--samo_title2);
    }
  }
  .role {
    text-align: center;
    opacity: .75;
    &.samo {
      color: var(--samo_title2);
    }
  }
  .picture {
    text-align: center;
    border-radius: 100%;
    

    &.pic {
      background-color: yellow;
      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    }
  }
  .text {
    padding-top: 15px;
    &.samo {
      color: var(--samo_text);
    }
    
  }
}

.person-item:hover {
  transition: 0.3s;
  scale: 1.05;
}

.bg {
  position: fixed;
  top: 0%;
  width: 100%;
  height: 100vh;
  background-color: rgba(1,2,64,1);

  // "inspiracia": https://www.sliderrevolution.com/coding/css-background-patterns/
  background-image:
  linear-gradient(60deg, rgba(3,4,94,.6) 25%, transparent 25%, transparent 75%, rgba(3,4,94,.6) 75%, rgba(3,4,94,.6)),
  linear-gradient(120deg, rgba(3,4,94,.6) 25%, transparent 25%, transparent 75%, rgba(3,4,94,.6) 75%, rgba(3,4,94,.6));
  background-size: 200px 150px;
  z-index: -1;
  &.vojto {
      background-image: url("background.jpg");
      background-size: cover;
      background-repeat: no-repeat;
      background-attachment: fixed;
      display: flex;
      justify-content: center;
      align-items: center;
  }
  &.samo {
    background-image:
    linear-gradient(60deg, rgba(3,4,94,.4) 25%, transparent 25%, transparent 75%, rgba(3,4,94,.4) 75%, rgba(3,4,94,.4)),
    linear-gradient(120deg, rgba(3,4,94,.4) 25%, transparent 25%, transparent 75%, rgba(3,4,94,.4) 75%, rgba(3,4,94,.4));
  }
}

.main {
  width: 70%;
  position: relative;
  max-width: 1080px;
  z-index: 2;
  margin: 0 auto 0 auto;
  background-color: white;
  padding: 50px 20px 50px 20px;

  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;

  &.vojto:before {
    content: '';
    position: absolute;
    left: 0px;
    right: 0;
    top: 30px;
    bottom: 0;
    background: inherit;
    box-shadow: inset 0 0 0 3000px rgba(255, 255, 255, 0.42);
    backdrop-filter: blur(8px);
    filter: blur(10px);
    background-attachment: fixed;
    border-radius: 15px;
  }

  &.vojto {
    border-radius: 15px;
    background: inherit;
    /*border: 1px solid rgba(43, 43, 43, 0.568);
    position: absolute;
    overflow: hidden;*/
  }

  &.samo {
    background-color: var(--samo_main);
  }
}

.myframe {
  padding: 0;
  margin: 0;
  align-items: center;
  background-color: white;
  display: flex;
  flex-direction: column;
  position: absolute;
  max-height: calc(100vh * 0.7);
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  &.samo {
    background-color: var(--samo_main);
  }
}

.framehdr {
  width: 100%;
  padding: 0;
  margin: 0;
  background-color: navy;
  height: 22px;
  top: 0%;
  opacity: 1;
  position: relative;
  outline: 2px solid white;
}

.framebody {
  overflow: scroll;
  outline: 2px solid white;
  padding: 10px;
}

.space10 {
  width: 100%;
  height: 10px;
  background-color: none;
}

.about {
  .title {
    font-weight: bold;
    padding-top: 10px;
    text-align: center;
    font-size: 15px;
    &.samo {
      color: var(--samo_title);
    }
  }
  .subtitle {
    text-align: center;
    font-size: 13px;
    opacity: 0.7;
    &.samo {
      color: var(--samo_title2);
    }
  }
  .text {
    text-align: center;
    padding-top: 5px;
    &.samo {
      color: var(--samo_text);
    }
  }
  padding-bottom: 50px;
}

.row {
  width: 100%;
  display: flex;
  justify-content: center;
}

.bigtitle {
  text-align: center;
  font-size: 20px;
  font-weight: bold;
  color: #000055;
  text-shadow: 1px 2px 2px rgba(179, 147, 211, 0.8);
  &.samo {
    color: var(--samo_title);
  }
}

.hline_top {
  width: 100%;
  border-top: 2px solid #000055;
  padding-top: 10px;
  &.samo {
    border-top: var(--samo_hline);
  }
}

.title {
  text-shadow: 1px 2px 2px rgba(179, 147, 211, 0.8);
}

.zap_item {
  max-width: 400px;
  display: flex;
  z-index: 1000;
  justify-content: left;

  .zap_image {
    width: 50px;
    grid-column: 1;
    grid-row: 1;
    &.samo {
      color: var(--samo_image);
    }
  }

  .text {
    grid-column: 2;
    grid-row: 1;
    width: 100%;
    margin: auto 0;

    &.samo {
      color: var(--samo_text);
    }

    .desc {
      opacity: .7;
    }
  }
}

.zap_item:hover {
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  transition: 0s;
  cursor: pointer;
}

.zap_list {
  padding: 10px;
  width: 70%;
  align-items: center;
  display: flex;
  justify-content: center;
  

  .col_right {
    flex: 50%;
  }

  .col_left {
    flex: 50%;
  }
}

.exit_circle {
  background-color: red;
  border-radius: 100%;
  width: 18px;
  height: 18px;
  margin: 2px;
  color: red;
  cursor: pointer;
}

.exit_circle:hover {
  background-color: #ff5050;
  color: #ff5050;
  transition: 0.3s;
}

.xd {
  position: absolute;
  display: flex;
  border-radius: 20px;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
  &.samo {
    background-color: var(--samo_tab_background);
  }
}

